--- a/public/script/nidhugg/imageModal/nidhuggImageModal.css
+++ b/public/script/nidhugg/imageModal/nidhuggImageModal.css
@@ -2,17 +2,6 @@ nidhugg-image-modal:not(:defined) {
 	display: none;
 }
 
-nidhugg-image-modal img {
-	width: auto;
-	height: 150px;
-	max-height: 150px;
-	border-radius: var(--nidhugg-rounded, 0.5rem);
-	cursor: pointer;
-	opacity: 1;
-	transition: 250ms ease;
-}
-
-
 .nidhugg-image-modal__dialog {
 	display: none;
 	transition: all 0.3s ease-in-out;
